add endpoint for devices to request generation of certificates, update test, update openapi schema, remove generate-certificate flag
