# cos_registration_server/openapi.yaml
@@ -938,6 +938,37 @@ paths:
           description: ''
         '404':
           description: UID not found
+  /api/v1/devices/{uid}/certificate:
+    get:
+      operationId: devices_certificate_retrieve
+      description: Retrieve the TLS certificate and private key for a device by UID
+      summary: Get a device TLS certificate
+      parameters:
+      - in: path
+        name: uid
+        schema:
+          type: string
+        required: true
+      tags:
+      - devices
+      security:
+      - {}
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  certificate:
+                    type: string
+                    description: PEM-encoded certificate
+                  private_key:
+                    type: string
+                    description: PEM-encoded private key
+          description: ''
+        '404':
+          description: Device certficate not found
   /api/v1/health/:
     get:
       operationId: health_retrieve
@@ -1112,9 +1143,6 @@ components:
         public_ssh_key:
           type: string
           title: Device public SSH key
-        generate_certificate:
-          type: boolean
-          title: Whether to generate a device TLS certificate
         grafana_dashboards:
           type: array
           items:
@@ -1192,9 +1220,6 @@ components:
         public_ssh_key:
           type: string
           title: Device public SSH key
-        generate_certificate:
-          type: boolean
-          title: Whether to generate a device TLS certificate
         grafana_dashboards:
           type: array
           items:
